language and form changes

--- a/www/templates/info-friend.html
+++ b/www/templates/info-friend.html
@@ -1,9 +1,9 @@
 <ion-view view-title="{{'TAB_INFO_FRIEND' | translate}}">
   <ion-content on-swipe-left="goToStart()" class="about-page">
   <ion-item class="item-text-wrap">
-  <img src='images/ios-icon-120.png' style="float:left; padding: 0 10px 10px 0;"/><h1>Fonte da Vida</h1>
+  <img src='images/ios-icon-120.png' style="float:left; padding: 0 10px 10px 0;"/><h1>{{'APP_NAME' | translate}}</h1>
     <div ng-if="settings.lang =='en'">
-      <p>Fonte da Vida is a joint partnership between <a href="http://equipmoz.org">Equip Mozambique</a> and the local mozambican churches.
+      <p>Fountain of Life is a joint partnership between <a href="http://equipmoz.org">Equip Mozambique</a> and the local mozambican churches.
       </p>
       <script type="text/javascript">
         $(document).ready(function () 
@@ -26,29 +26,7 @@
        </p><p>
        Se você quer enviar seus recursos para beneficiar o povo moçambicano, por favor clique no link acima ou <a href="mailto: nordino@equipmoz.org"> Envie-nos um e-mail para mais informações </a>. Estamos sempre à procura de mais organizações ao sócio e gostariamos de ouvir de você. </p><p>
        Se você acredita que há uma violação de direitos autorais de qualquer parte do material fornecido, por favor preencha o formulário localizado <a href="#/tab/about/copyright-form">aqui</a>.
-        </p><p>
-       Programador-chefe: <a href="mailto:jon@equipmoz.org">Jon Reinagel</a>, <a href="http://equipmoz.org">Equip Mozambique</a><br>
-       API do Projeto: Kneight Reinagel <br>
-       Desenvolvedor/programador: Eliseu Botelho Piripiri<br>
-       Tradução: Nordino Armando <br>
-       Experimentalização: Isaac DiGennaro<br/>
-       Analista Grafica: Melissa Erikson and Erin Bullington
-
-       </p>
-    </div>
-    <div ng-if="settings.lang =='fr'">
-       <p> Fonte da Vida Il est un partenariat entre <a href="http://equipmoz.org">Equip Mozambique</a> et les églises locales Mozambique.
-       
-       </p><p> Le but de l'application est de fournir des ressources aux croyants locaux dans une langue et la méthode qu'ils peuvent comprendre. Toute église peut télécharger des fonctionnalités dans l'application à condition qu'ils suivent la <a href="#/tab/about/partnership-form"> lignes directrices </a>.
-       </p><p>
-       Chef programmeur: <a href="mailto:jon@equipmoz.org">Jon Reinagel</a>, <a href="http://equipmoz.org">Equip Mozambique</a><br>
-       API de projet: Kneight Reinagel <br>
-       Développeur / Programmeur: Eliseu Botelho Piripiri<br>
-       Traduction: Nordino Armando <br>
-       Essai: Isaac DiGennaro<br/>
-       Analyste Graphique: Melissa Erikson and Erin Bullington
-
-       </p>
+        </p>
     </div>
   </ion-item>
   </ion-content>
