--- a/www/templates/info-help.html
+++ b/www/templates/info-help.html
@@ -1,7 +1,7 @@
 <ion-view view-title="{{'TAB_ABOUT_HELPING' | translate}}">
   <ion-content on-swipe-left="goToStart()" class="about-page">
   <ion-item class="item-text-wrap">
-  <img src='images/ios-icon-120.png' style="float:left; padding: 0 10px 10px 0;"/><h1>Fonte da Vida</h1>
+  <img src='images/ios-icon-120.png' style="float:left; padding: 0 10px 10px 0;"/><h1>{{"APP_NAME" | translate}}</h1>
     <div>
       <ion-list ng-hide="isBibleDownload" show-delete="data.showDelete" class="item-remove-animate" ng-controller="ListCtrl">
           <ion-header-bar class="bar-positive" style="padding:25px; position: relative">
