--- a/www/templates/info-privacy.html
+++ b/www/templates/info-privacy.html
@@ -1,8 +1,8 @@
 <ion-view view-title="{{'PRIVACY_POLICY' | translate}}">
   <ion-content on-swipe-left="goToStart()" class="about-page">
   <ion-item class="item-text-wrap">
-  <img src='images/android/icon-96-xhdpi.png' style="float:center; padding: 0 10px 10px 0;"/><h1>Fonte da Vida</h1>
-      <h2>Fonte da Vida Privacy Policy</h2>
+  <img src='images/android/icon-96-xhdpi.png' style="float:center; padding: 0 10px 10px 0;"/><h1>Fountain of Life</h1>
+      <h2>Fountain of Life Privacy Policy</h2>
         <p>This privacy policy has been compiled to better serve those who are concerned with how their 'Personally Identifiable Information' (PII) is being used online. PII, as described in US privacy law and information security, is information that can be used on its own or with other information to identify, contact, or locate a single person, or to identify an individual in context. Please read our privacy policy carefully to get a clear understanding of how we collect, use, protect or otherwise handle your Personally Identifiable Information in accordance with our website.</p>
         <h2>What personal information do we collect from the people that visit our blog, website or app?
         </h2><p>
@@ -109,7 +109,7 @@
         </h2><p>
         If there are any questions regarding this privacy policy, you may contact us using the information below.
         </p><p>
-        Fonte da Vida<br>
+        Fountain of Life<br>
         327 Rua Pero de Covihla<br>
         Beira, Sofala 2100<br>
         Mozambique<br>
@@ -117,7 +117,7 @@
         </p><p>
         Last Edited on 2017-1-07
       </p>
-  <img src='images/ios-icon-120.png' style="float:left; padding: 0 10px 10px 0;"/><h1>Fonte da Vida</h1>
+  <img src='images/ios-icon-120.png' style="float:left; padding: 0 10px 10px 0;"/><h1>Fountain of Life</h1>
     <div ng-if="settings.lang =='en'" ng-bind-html="html">
     </div>
     <div ng-if="settings.lang =='pt'">
