--- a/www/templates/tab-info.html
+++ b/www/templates/tab-info.html
@@ -1,23 +1,16 @@
 <ion-view view-title="{{'ABOUT_TITLE' | translate}}">
   <ion-content class="about-page">
   <ion-item class="item-text-wrap">
-  <img src='images/ios-icon-120.png' style="float:left; padding: 0 10px 10px 0;"/><h1>Fonte da Vida</h1>
+  <img src='images/ios-icon-120.png' style="float:left; padding: 0 10px 10px 0;"/><h1>{{"APP_NAME" | translate}}</h1>
     <div ng-if="settings.lang =='en'">
-      <p>Fonte da Vida is a joint partnership between <a href="http://equipmoz.org">Equip Mozambique</a> and the local mozambican churches.
+      <p>Fountain of Life is a joint partnership between <a href="http://equipmoz.org">Equip Mozambique</a> and the local mozambican churches.
 
       </p><p>The goal of the application is to provide resources to the local believers in a language and method they can understand. Any church is able to upload resources on the app provided they follow the <a href="#/tab/about/partnership-form">guidelines</a>.
       </p><p>
       If you want to upload your resources to benefit the Mozambican people, please click the link above or <a href="mailto: fonte@equipmoz.org" >E-mail us for more information</a>. We are always looking for more organizations to partner with and would love to hear from you.
       </p><p>
       If you believe there is a copyright infringement of any of the material provided, please fill out form located <a href="#/tab/about/copyright-form">here</a>.
-       </p><p>
-      Chief Programmer: Jon Reinagel, <a href="http://equipmoz.org">Equip Mozambique</a><br/>
-      API Design: Kneight Reinagel<br/>
-      Developer/programmer: Eliseu Botelho Piripiri<br>
-      Testing: Isaac DiGennaro<br/>
-      Translation: Nordino Armando<br/>
-      User Experience and Design Consultation: Melissa Erikson and Erin Bullington
-      </p>
+       </p>
     </div>
     <div ng-if="settings.lang =='pt'">
        <p> Fonte da Vida é uma parceria conjunta entre <a href="http://equipmoz.org">Equip Mozambique</a> e as igrejas locais moçambicanas.
