--- a/www/templates/info-team.html
+++ b/www/templates/info-team.html
@@ -2,7 +2,7 @@
   <ion-content on-swipe-left="goToStart()" class="about-page">
   <ion-item class="item-text-wrap">
 
-    <img src='images/android/icon-96-xhdpi.png' style="float:center; padding: 0 10px 10px 0; margin: 0 auto;"/><h1>Fonte da Vida</h1>
+    <img src='images/android/icon-96-xhdpi.png' style="float:center; padding: 0 10px 10px 0; margin: 0 auto;"/><h1>{{"APP_NAME" | translate}}</h1>
   </ion-item>
   <ion-item ng-repeat="member in team track by $index" class="item item-thumbnail-left">
     
