--- a/www/templates/tab-about.html
+++ b/www/templates/tab-about.html
@@ -2,9 +2,9 @@
   <ion-content class="about-page">
   <ion-item class="item-text-wrap">
   <div style="text-align: left;">
-  <img src='images/android/icon-96-xhdpi.png' style="float:left; padding: 0 10px 10px 0;"/><h1>Fonte da </h1><h1>Vida</h1>
+  <img src='images/android/icon-96-xhdpi.png' style="float:left; padding: 0 10px 10px 0;"/><h1>{{"APP_NAME" | translate}}</h1>
     <div ng-if="settings.lang =='en'">
-      <p style="padding-top: 30px;">Fonte da Vida is a joint partnership between <a href="http://equipmoz.org">Equip Mozambique</a> and the churches. While Fonte da Vida was originally created for Mozambique, it is now available in all Portuguese-speaking countries in Africa and will soon be available throughout the continent.
+      <p style="padding-top: 30px;">Fountain of Life is a joint partnership between <a href="http://equipmoz.org">Equip Mozambique</a>, international partners, and the local african churches. While Fountain of Life was originally created for Mozambique, it is now available in all Portuguese-speaking countries in Africa and is coming to all of the English-speaking countries on the continent by the end of 2017.
 
       </p><p>The goal of the application is to provide resources to the local believers in a language and method they can understand. Any church is able to upload resources on the app provided they follow the <a href="#/info/partner">guidelines</a>.
       </p><p>
@@ -14,11 +14,11 @@
        </p>
     </div>
     <div ng-if="settings.lang =='pt'">
-       <p> Fonte da Vida é uma parceria conjunta entre <a href="http://equipmoz.org">Equip Mozambique</a> e as igrejas locais moçambicanas.
+       <p> Fonte da Vida é uma parceria conjunta entre <a href="http://equipmoz.org">Equip Mozambique</a>, organizaçoes internacionais, e a igreja local em Africa.
        
        </p><p> O objectivo do aplicativo é fornecer recursos para os crentes locais em um idioma e método que eles possam entender. Qualquer igreja é capaz de fazer upload de recursos no aplicativo desde que sigam as <a href="#/info/partner"> orientações </a>.
        </p><p>
-       Se você quer enviar seus recursos para beneficiar o povo moçambicano, por favor clique no link acima ou <a href="mailto: nordino@equipmoz.org"> Envie-nos um e-mail para mais informações </a>. Estamos sempre à procura de mais organizações ao sócio e gostariamos de ouvir de você. </p><p>
+       Se você quer enviar seus recursos para beneficiar o povo moçambicano, por favor clique no link acima ou <a href="mailto: fonte@equipmoz.org"> Envie-nos um e-mail para mais informações </a>. Estamos sempre à procura de mais organizações ao sócio e gostariamos de ouvir de você. </p><p>
        Se você acredita que há uma violação de direitos autorais de qualquer parte do material fornecido, por favor preencha o formulário localizado <a href="#/info/copyright">aqui</a>.
         </p><p>
        </p>
