--- a/www/templates/info-partner.html
+++ b/www/templates/info-partner.html
@@ -1,31 +1,84 @@
 <ion-view view-title="{{'PARTNERSHIP' | translate}}">
   <ion-content on-swipe-left="goToStart()" class="about-page">
-  <ion-item class="item-text-wrap">
-    <div class="item item-divider">{{'PARTNERSHIP_INFORMATION' | translate}}</div>
-    <form name="partnership" ng-submit="form.sendMail(partnership, 'partnership')">
-      <label class="item item-input">
-          <input type="text" name="name" placeholder="{{'NAME' | translate}}" required>
-      </label>
-      <label class="item item-input">
-        <input type="email" name="email" placeholder="E-mail" required>
-      </label>
-      <label class="item item-input">
-          <input type="text" name="organization" placeholder="{{'ORGANIZATION' | translate}}" required>
-      </label>
-      <label class="item item-input">
-        <input type="tel" name="phone" placeholder="{{'PHONE' | translate}}" required>
-      </label>
-      <label class="item item-input">
-        <input type="text" name="languages" placeholder="{{'LANGUAGES_AVAILABLE' | translate}}" required>
-      </label>
-      <label class="item item-input">
-        <textarea rows="4" name="details" placeholder="{{'ORGANIZATION_DETAILS' | translate}}" required></textarea>
-      </label>
-      <div class="item item-divider bar-assertive">{{'IMPORTANT_NOTICE' | translate}} <a href="http://api.fontedavida.org/license.html">{{'HERE' | translate}}</a></div>
-      <div class="padding">
-        <button class="button button-block button-positive" type="submit">{{'AGREE' | translate}}</button>
-      </div>
-    </form>
-  </ion-item>
+	<ion-list>
+    		<ion-item>
+    			<div class="item item-divider">{{'PARTNERSHIP_INFORMATION' | translate}}</div>
+    	    	<div class="item item-text-wrap"> <strong class="assertive">{{'IMPORTANT' | translate}}:</strong>  
+    	    	    {{'PARTNERSHIP_MAIN_CONDITION' | translate}}
+    	    	</div>
+    	    	<!--ng-submit="form.sendMail(partnership, 'partnership')" -->
+    	    	<form name="partnership" ng-submit="form.sendMail(partnership, 'partnership')">
+    		</ion-item>
+    	
+      	<ion-item>
+      		<p><strong>{{'KIND_RESOURCES' | translate}}</strong></p>
+        	<ul class="list">
+              <li class="item item-checkbox">{{'SERMON' | translate}} <label class="checkbox">  <input type="checkbox" name="resources"/> </label> </li>
+              <li class="item item-checkbox"> {{'BOOKS_PDF' |translate}}<label class="checkbox">  <input type="checkbox" name="resources"/> </label> </li>
+              <li class="item item-checkbox">{{'AUDIO_BIBLE' | translate}} <label class="checkbox">  <input type="checkbox" name="resources"/> </label> </li>
+          	</ul>  
+        </ion-item>
+       
+        <ion-item>
+        	<p><strong>{{'LANGUAGE_RESOURCES' | translate}}</strong></p>
+        	<label class="item item-input">
+        		<input type="text" name="idioma" placeholder="{{'IDIOM' | translate}}" ng-model="idioma" required />
+            <span class="assertive" ng-show="partnership.idioma.$touched && partnership.idioma.$invalid">{{'INPUT_EMPTY' | translate}}</span>
+        	</label>
+        </ion-item>
+
+        <ion-item>
+          <label class="item item-input">
+            <input type="text" name="nome" placeholder="{{'YOUR_NAME' | translate}}" ng-model="nome" required/>
+            <span class="assertive" ng-show="partnership.nome.$touched && partnership.nome.$invalid">{{'INPUT_EMPTY' | translate}}</span>
+          </label>
+
+          <label class="item item-input">
+            <input type="email" name="email" placeholder="{{'YOUR_EMAIL' | translate}}" />
+          </label>
+
+          <label class="item item-input">
+            <input type="text" name="telefone" placeholder="{{'YOUR_PHONE' | translate}}" ng-model="telefone" required />
+            <span class="assertive" ng-show="partnership.telefone.$touched && partnership.telefone.$invalid">{{'INPUT_EMPTY' | translate}}</span>
+          </label>
+
+          <label class="item item-input">
+            <input type="text" id="pais" name="pais" placeholder="{{'YOUR_COUNTRY' | translate}}" ng-model="pais" required />
+            <span class="assertive" ng-show="partnership.pais.$touched && partnership.pais.$invalid">{{'INPUT_EMPTY' | translate}}</span>
+          </label>
+
+          <label class="item item-input">
+            <input type="text" name="organizacao" placeholder="{{'YOUR_ORGANIZATION' | translate}}" ng-model="organizacao" required />
+            <span class="assertive" ng-show="partnership.organizacao.$touched && partnership.organizacao.$invalid">{{'INPUT_EMPTY' | translate}}</span>
+          </label>
+          <label class="item item-select">
+          <p>
+            <strong>{{'IF_IS_LEADER' | translate}}</strong>
+          </p>
+          <p> <select name="lideranca" ng-model="lideranca" required>
+              <option value="">{{'LEADER_OPTIONS' | translate}}</option>
+              <option value="sim">{{'LEADER_OPTIONS_Y' | translate}}</option>
+              <option value="nao">{{'LEADER_OPTIONS_N' | translate}}</option>
+            </select>
+            <span class="assertive" ng-show="partnership.lideranca.$touched && partnership.lideranca.$invalid">{{'LEADER_OPTIONS_CHOOSE' | translate}}</span>
+          </p>
+          </label>
+        </ion-item>
+
+        <ion-item>
+        	<p>{{'TERMS_CONDITIONS' | translate}} <a href="http://api.fontedavida.org/termos.html" target="_blank">{{'TERMS_LINK' | translate}}</a> </p>
+        	<p class="item item-checkbox">
+        	{{'TERMS_CONDITIONS_AGREE' | translate}}
+        		<label class="checkbox"> <input type="checkbox" name="condicoes" ng-model="condicoes" required/> 
+            
+            </label><span class="assertive" ng-show="partnership.condicoes.$touched && partnership.condicoes.$invalid">{{'TERMS_CONDITIONS_ERROR' | translate}}</span>
+        	</p>
+        </ion-item>
+
+        <ion-item>
+        	<button type="submit" class="button button-block button-positive" name="submeter" ng-disabled="partnership.$invalid">{{'SUBMIT_FORM' | translate}}</button>
+        </ion-item>
+		</form>
+    </ion-list>
   </ion-content>
 </ion-view>
