working commit for version 3.6.6

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -348,6 +348,10 @@ p.date-display {
  		padding-right: 0px;
  		float:none;
  	}
+ 	.bible-org-info {
+ 		max-height: 350px;
+ 	}
+
  	.bible-download {
  		float:left;
  	}
